# Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
# This source file is part of the Cangjie project, licensed under Apache-2.0
# with Runtime Library Exception.
#
# See https://cangjie-lang.cn/pages/LICENSE for license information.

set(DOC_HIGHLIGHT_TEST_SRC
    DocumentHighlightTest.cpp
)

add_library(DocHighlightTest OBJECT ${DOC_HIGHLIGHT_TEST_SRC})