# Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
# This source file is part of the Cangjie project, licensed under Apache-2.0
# with Runtime Library Exception.
#
# See https://cangjie-lang.cn/pages/LICENSE for license information.

set(WORKSPACE_SYMBOL_TEST_SRC
    WorkspaceSymbolTest.cpp
)

add_library(WorkspaceSymbolTest OBJECT ${WORKSPACE_SYMBOL_TEST_SRC})